--- a/src/main/resources/templates/addForm.html
+++ b/src/main/resources/templates/addForm.html
@@ -17,7 +17,7 @@
         <form action="/api/products/add" method="post">
             <div class="py-3">
                 <label for="id">상품 ID</label>
-                <input type="text" id="id" name="id" class="form-control" placeholder="상품 ID를 입력하세요">
+                <input type="number" id="id" name="id" class="form-control" placeholder="상품 ID를 입력하세요">
             </div>
             <div class="py-3">
                 <label for="name">상품명</label>
@@ -25,7 +25,7 @@
             </div>
             <div class="py-3">
                 <label for="price">가격</label>
-                <input type="text" id="price" name="price" class="form-control" placeholder="가격을 입력하세요">
+                <input type="number" id="price" name="price" class="form-control" placeholder="가격을 입력하세요">
             </div>
             <div class="py-3">
                 <label for="imageUrl">이미지</label>
