--- a/src/main/resources/templates/editForm.html
+++ b/src/main/resources/templates/editForm.html
@@ -18,7 +18,7 @@
         <form action="/api/products/edit" method="post">
             <div class="py-3">
                 <label for="id">상품 ID</label>
-                <input type="text" id="id" name="id" class="form-control" th:value="${product.id}" readonly>
+                <input type="number" id="id" name="id" class="form-control" th:value="${product.id}" readonly>
             </div>
             <div class="py-3">
                 <label for="name">상품명</label>
@@ -26,7 +26,7 @@
             </div>
             <div class="py-3">
                 <label for="price">가격</label>
-                <input type="text" id="price" name="price" class="form-control" th:value="${product.price}">
+                <input type="number" id="price" name="price" class="form-control" th:value="${product.price}">
             </div>
             <div class="py-3">
                 <label for="imageUrl">이미지 URL</label>
