--- a/src/main/resources/templates/new-product.html
+++ b/src/main/resources/templates/new-product.html
@@ -9,18 +9,20 @@
 <div class="container">
   <h1>New Product</h1>
   <div class="outer-form">
-    <div class="inner-form">
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" required>
-      <label for="price">Price</label>
-      <input type="number" id="price" name="price" required>
-      <label for="imageUrl">Image URL</label>
-      <input type="text" id="imageUrl" name="imageUrl" required>
-    </div>
-    <div class="button-group">
-      <button class="btn btn-primary">Add</button>
-      <a href="/products" class="btn btn-secondary">Cancel</a>
-    </div>
+    <form action="/products" method="post">
+      <div class="inner-form">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required>
+        <label for="price">Price</label>
+        <input type="number" id="price" name="price" required>
+        <label for="imageUrl">Image URL</label>
+        <input type="text" id="imageUrl" name="imageUrl" required>
+      </div>
+      <div class="button-group">
+        <button type="submit" class="btn btn-primary">Add</button>
+        <a href="/products" class="btn btn-secondary">Cancel</a>
+      </div>
+    </form>
   </div>
 </div>
 </body>
