--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 <body>
     <div>
         <h1>Manage Products</h1>
-        <a href="/showNewProductForm">Add New Product</a>
+        <a href="/showNewProducts">Add New Product</a>
         <table>
             <thead>
             <tr>
