--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -48,7 +48,7 @@
         <td>
           <button class="btn btn-secondary"
                   onclick="location.href='editForm.html'"
-                  th:onclick="|location.href='@{/step2/products/{id}/edit(id=${product.id})}'|" type="button">수정</button>
+                  th:onclick="|location.href='@{/step2/products/edit(id=${product.id})}'|" type="button">수정</button>
           <button class="btn btn-danger"
                   onclick="location.href='products.html'"
                   th:onclick="|deleteConfirm([[${product.id}]])|" type="button">삭제</button>
