--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -4,6 +4,7 @@
   <title>Manage Products</title>
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <script src="/js/main.js" defer></script>
 </head>
 <body>
 <div class="container">
@@ -34,7 +35,7 @@
         <td><a th:href="@{'/products/' + ${product.id}}" th:text="${product.price}"></a></td>
         <td>
           <a th:href="@{'/products/edit/' + ${product.id}}"><button class="icon-btn"><i class="fa-solid fa-pen"></i></button></a>
-          <button class="icon-btn"><i class="fa-solid fa-trash-can"></i></button>
+          <button class="icon-btn" th:data-product-id="${product.id}" onclick="deleteProduct(this)"><i class="fa-solid fa-trash-can"></i></button>
         </td>
       </tr>
       </tbody>
