--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -8,6 +8,14 @@
 <body>
   <div class="container" style="display: flex; flex-direction: column; justify-content: center; margin-top: 50px;">
     <h2 class="py-4 text-center border-bottom mb-5">상품 전체 목록</h2>
+    <div class="row">
+      <div class="col">
+        <button class="btn btn-primary mb-5"
+                onclick="location.href='insertForm.html'"
+                th:onclick="|location.href='@{/admin/products/insert}'|"
+                type="button">상품 추가</button>
+      </div>
+    </div>
     <div>
       <table class="table">
         <thead>
