--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
             <td th:text="${product.name}"/>
             <td th:text="${product.price}"/>
             <td th:text="${product.imageUrl}"/>
-            <td>수정</td>
+            <td><button><a th:href="@{/admin/product/update/{id}(id=${product.id})}">수정</a></button></td>
             <td>
                 <form th:action="@{/admin/product/delete/{id}(id=${product.id})}" method="post">
                     <input type="hidden" name="_method" value="delete" />
