--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -9,7 +9,13 @@
   <h1 class="my-4">Manage <strong>Products</strong></h1>
 
   <div class="mb-4">
-    <button class="btn btn-success" data-toggle="modal" data-target="#productModal">Add New Product</button>
+    <button class="btn btn-success" data-toggle="modal" data-target="#productModal">상품 추가</button>
+    <input type="text" id="productId" placeholder="Enter Product ID" class="form-control d-inline-block w-auto ml-2">
+    <button class="btn btn-info" onclick="searchProductById()">상품 조회</button>
+  </div>
+
+  <div th:if="${errorMessage}" class="alert alert-danger" role="alert">
+    <p th:text="${errorMessage}"></p>
   </div>
 
   <table class="table table-striped">
@@ -29,10 +35,11 @@
       <td th:text="${product.price}"></td>
       <td><img th:src="${product.imageUrl}" alt="Product Image" style="width:100px;height:auto;"/></td>
       <td>
-        <button class="btn btn-warning" th:onclick="'editProduct(' + ${product.id} + ')'">Edit</button>
+        <button class="btn btn-warning" th:onclick="'editProduct(' + ${product.id} + ')'">수정</button>
         <form th:action="@{/products/delete/{id}(id=${product.id})}" method="post" style="display:inline;">
-          <button type="submit" class="btn btn-danger">Delete</button>
+          <button type="submit" class="btn btn-danger">삭제</button>
         </form>
+        <a th:href="@{/products/view/{id}(id=${product.id})}" class="btn btn-info">조회</a>
       </td>
     </tr>
     </tbody>
@@ -80,14 +87,38 @@
 <script>
   function editProduct(id) {
     fetch(`/products/${id}`)
-    .then(response => response.json())
+    .then(response => {
+      if (!response.ok) {
+        throw new Error('존재하지 않는 상품 입니다.');
+      }
+      return response.json();
+    })
     .then(product => {
       document.getElementById('name').value = product.name;
       document.getElementById('price').value = product.price;
       document.getElementById('imageUrl').value = product.imageUrl;
       document.getElementById('productForm').action = `/products/${id}`;
       $('#productModal').modal('show');
+    })
+    .catch(error => {
+      alert(error.message);
     });
+  }
+
+  function searchProductById() {
+    const productId = document.getElementById('productId').value;
+    if (productId) {
+      fetch(`/products/${productId}`)
+      .then(response => {
+        if (!response.ok) {
+          throw new Error('존재하지 않는 상품 입니다.');
+        }
+        window.location.href = `/products/view/${productId}`;
+      })
+      .catch(error => {
+        alert(error.message);
+      });
+    }
   }
 </script>
 </body>
